feat: 增强风险控制和智能通知系统
主要改进：
- 优化双重阈值风险控制（极限阈值/监控阈值）
- 优化装死模式动态止盈策略
- 改进止盈单智能管理和价格容忍机制
- 优化风险减仓和双倍止盈止损功能

--- a/.gitignore
+++ b/.gitignore
@@ -185,6 +185,7 @@ Thumbs.db
 *.bak
 *.backup
 *.old
+*.history
 
 # 测试覆盖率报告
 .coverage
@@ -197,4 +198,4 @@ htmlcov/
 # 编译文件
 *.pyc
 *.pyo
-*.pyd 
+*.pyd
