🔧 feat: 添加装死状态文件卷挂载，解决容器内文件同步问题
- 在docker-compose.yml中添加状态文件目录卷挂载
- 修改deploy.sh脚本自动创建状态目录
- 添加卷挂载配置说明文档
- 解决日志显示写入成功但宿主机文件未更新的问题

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -31,6 +31,7 @@ services:
       - ../config/.env:/app/.env:ro  # 环境变量文件
       - ../config/symbols.yaml:/app/config/symbols.yaml:ro  # 多币种配置文件
       - ../config/symbols.json:/app/config/symbols.json:ro  # 多币种配置文件（可选）
+      - ../src/multi_bot/state:/app/src/multi_bot/state  # 装死状态文件目录
     
     # 网络配置
     networks:
