🔒 chore: 更新gitignore忽略state文件夹中的运行时状态文件
- 添加src/multi_bot/state/目录到gitignore
- 移除已跟踪的状态文件，避免提交运行时数据
- 状态文件包含交易数据，不应提交到版本控制

--- a/.gitignore
+++ b/.gitignore
@@ -143,6 +143,10 @@ log/*.log.*
 log/*.log.gz
 log/*.log.bz2
 
+# 状态文件（运行时生成，不应提交到版本控制）
+src/multi_bot/state/
+src/multi_bot/state/*.json
+
 # 环境变量文件
 .env
 .env.local
