--- a/config/symbols.json.example
+++ b/config/symbols.json.example
@@ -6,6 +6,8 @@
       "initial_quantity": 0.05,
       "leverage": 20,
       "contract_type": "USDC",
+      "position_threshold_factor": 20,
+      "position_limit_factor": 10,
       "_comment": "SOL币种配置 - 网格间距0.005，初始数量0.05个，20倍杠杆，USDC合约"
     },
     {
@@ -14,6 +16,8 @@
       "initial_quantity": 0.001,
       "leverage": 10,
       "contract_type": "USDT",
+      "position_threshold_factor": 20,
+      "position_limit_factor": 10,
       "_comment": "BTC币种配置示例 - 网格间距50美元，初始数量0.001个，10倍杠杆，USDT合约"
     },
     {
@@ -22,6 +26,8 @@
       "initial_quantity": 0.01,
       "leverage": 15,
       "contract_type": "USDT",
+      "position_threshold_factor": 20,
+      "position_limit_factor": 10,
       "_comment": "ETH币种配置示例 - 网格间距5美元，初始数量0.01个，15倍杠杆，USDT合约"
     },
     {
@@ -30,6 +36,8 @@
       "initial_quantity": 100,
       "leverage": 30,
       "contract_type": "USDC",
+      "position_threshold_factor": 20,
+      "position_limit_factor": 10,
       "_comment": "DOGE币种配置示例 - 网格间距0.0001，初始数量100个，30倍杠杆，USDC合约"
     }
   ],
@@ -40,7 +48,9 @@
       "grid_spacing": "网格间距，决定每个网格之间的价格差",
       "initial_quantity": "初始交易数量",
       "leverage": "杠杆倍数（1-125倍）",
-      "contract_type": "合约类型（USDC或USDT）"
+      "contract_type": "合约类型（USDC或USDT）",
+      "position_threshold_factor": 20,
+      "position_limit_factor": 10
     }
   }
 } 
